Fixed temp file name